--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
+    "@rails/actioncable": "^8.0.100",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.8",
     "flowbite": "^3.1.2",
