--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@hotwired/turbo-rails": "^8.0.12",
     "@rails/actioncable": "^8.0.100",
     "autoprefixer": "^10.4.20",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.4.1",
+    "chartkick": "^5.0.1",
     "flowbite": "^3.1.2",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
