--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@rails/actioncable": "^8.0.100",
     "autoprefixer": "^10.4.20",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.8",
     "chartkick": "^5.0.1",
     "flowbite": "^3.1.2",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
-    "@fullcalendar/core": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/timegrid": "^6.1.8"
+    "tailwindcss": "^4.0.6"
   }
 }
