--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,9 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: postgres
   username: postgres
-  password: postgres
+  password: Paulo1lotusred
+  host: localhost
 
 development:
   <<: *default
